# Alignment

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  test_alignment.cpp
docs/: alignment_in_C++.md
